# lukas_utils

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  setup.py  utils.py
lukas_utils/: __init__.py  config.toml  helpers.py  helpers_data.py  helpers_logging.py  helpers_plot.py  helpers_sql.py  helpers_stats.py  matplotlib.py  stats.py  statsmodels.py  test.py  utils.py
lukas_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lukas_utils/others/: _utils.py  utils.py
notebooks/: init_notebook.py  statsmodels.ipynb
tests/: my_test.py  test.py
tests/df_test/: test.feather  test.pkl  test.xlsx
verysimplemodule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
