[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lukas_utils"
version = "0.1.2"
description = "My utils functions"
authors = [
    {name = "Lukas", email = "lukas.g@amkat.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas", 
    "regex", 
    "matplotlib",
    "mysql-connector-python>=9.2.0",
    "sqlalchemy>=2.0.37",
    "toml",
    "joblib",
    "atpbar",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/lukasgrahl/lukas_utils"